cabal-version:
  2.0
name:
  refined
version:
  0.4
synopsis:
  Refinement types with static and runtime checking
description:
  For an extensive introduction to the library please follow to 
  <http://nikita-volkov.github.io/refined this blog-post>.
category:
  Data
homepage:
  https://github.com/nikita-volkov/refined
bug-reports:
  https://github.com/nikita-volkov/refined/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  chessai <chessai1996@gmail.com> 
copyright:
  Copyright © 2015, Nikita Volkov
  Copyright © 2018, Remy Goldschmidt
  Copyright © 2018, Daniel Cartwright
  
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
tested-with:
    GHC == 8.0.2
  , GHC == 8.2.2
  , GHC == 8.4.4
  , GHC == 8.6.4

flag aeson
  description:
    You can disable the use of the `aeson` package using `-f-aeson`.
    .
    This may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

flag QuickCheck
  description:
    You can disable the use of the `QuickCheck` package using `-f-QuickCheck`.
    .
    This may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/refined.git

library
  hs-source-dirs:
    library
  exposed-modules:
    Refined
    Refined.Internal
    Refined.Orphan
      Refined.Orphan.Aeson
      Refined.Orphan.QuickCheck
    Refined.Unsafe 
      Refined.Unsafe.Type
  default-language:
    Haskell2010
  build-depends:
      base             >= 4.9.1.0 && < 4.13.0.0
    , deepseq          >= 1.4.0.0 && < 1.5.0.0
    , exceptions       >= 0.8.0.0 && < 0.11.0
    , mtl              >= 2.2.1.0 && < 3.0.0.0
    , prettyprinter    >= 1.1.0.1 && < 1.3.0.0
    , template-haskell >= 2.9.0.0 && < 2.15.0.0
    , these            >= 0.7.0.0 && < 0.8.0.0
    , transformers     >= 0.5.0.0 && < 0.6.0.0
  if flag(aeson)
    build-depends: aeson >= 0.9 && < 1.5.0.0
    cpp-options: -DHAVE_AESON
  if flag(QuickCheck)
    build-depends: QuickCheck >= 2.1 && < 2.13
    cpp-options: -DHAVE_QUICKCHECK
