cabal-version:
  2.0
name:
  refined
version:
  0.6.3
synopsis:
  Refinement types with static and runtime checking
description:
  For an extensive introduction to the library please follow to
  <http://nikita-volkov.github.io/refined this blog-post>.
category:
  Data
homepage:
  https://github.com/nikita-volkov/refined
bug-reports:
  https://github.com/nikita-volkov/refined/issues
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  Copyright © 2015, Nikita Volkov
  Copyright © 2018, Remy Goldschmidt
  Copyright © 2020, chessai
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
tested-with:
    GHC == 8.4.4
  , GHC == 8.6.5
  , GHC == 8.8.5
  , GHC == 8.10.7
  , GHC == 9.0.2
  , GHC == 9.2.1
extra-source-files:
    README.md
  , changelog.md

flag aeson
  description:
    You can disable the use of the `aeson` package using `-f-aeson`.
    .
    This may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

flag QuickCheck
  description:
    You can disable the use of the `QuickCheck` package using `-f-QuickCheck`.
    .
    This may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/refined.git

library
  hs-source-dirs:
    src
  exposed-modules:
    Refined
    Refined.Unsafe
      Refined.Unsafe.Type
  default-language:
    Haskell2010
  build-depends:
      base             >= 4.11 && < 4.17
    , bytestring       >= 0.10 && < 0.12
    , deepseq          >= 1.4 && < 1.5
    , exceptions       >= 0.8 && < 0.11
    , hashable         >= 1.0 && < 1.5
    , mtl              >= 2.2.2 && < 2.3
    , template-haskell >= 2.9 && < 2.19
    , text             >= 1.2 && < 2.1
    , these-skinny     >= 0.7.5 && < 0.8
  if flag(aeson)
    build-depends: aeson >= 0.9 && < 2.1
    cpp-options: -DHAVE_AESON
  if flag(QuickCheck)
    build-depends: QuickCheck >= 2.1 && < 2.15
    cpp-options: -DHAVE_QUICKCHECK

--test-suite doctest
--  type: exitcode-stdio-1.0
--  hs-source-dirs: test
--  main-is: Doctests.hs
--  build-depends:
--      base
--    , refined
--    , doctest >= 0.10
--  default-language: Haskell2010

test-suite arbitrary
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: QuickCheck.hs
  build-depends:
      base
    , refined
    , QuickCheck
  default-language: Haskell2010

test-suite compiles
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Compiles.hs
  build-depends:
      base
    , refined
  default-language: Haskell2010

--test-suite doesnt-compile
--   type: exitcode-stdio-1.0
--   hs-source-dirs: test
--   main-is: DoesntCompile.hs
--   build-depends:
--       base
--     , refined
--   default-language: Haskell2010
